--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -37,10 +37,10 @@ NetApp AIX Host Utilities 6.1 is the latest release. This release addresses the 
 
 . Uncompress the file and extract the SAN Toolkit software package.
 +
-` tar -xvf ntap_aix_host_utilities_6.1.tar.gz`
+`tar -xvf ntap_aix_host_utilities_6.1.tar.gz`
 
 +
-The following directory is created when you uncompress the file: ntap_aix_host_utilities_6.1.  This directory will have one of the following subdirectories:  MPIO, NON_MPIO, or SAN_Tool_Kit
+The following directory is created when you decompress the file: `ntap_aix_host_utilities_6.1`.  This directory will have one of the following subdirectories:  MPIO, NON_MPIO, or SAN_Tool_Kit.
 
 .	Install the AIX MPIO:
 +
@@ -173,11 +173,11 @@ By default, the AIX operating system enforces a shorter I/O timeout if when no p
 | Description
 | Partner ID
 
-| 1416221 | AIX 7200-05-01 encountered I/O disruption on virtual iSCSI disks(VIOS 3.1.1.x) during storage failover | I/O disruption can happen during storage failover operations on AIX 7.2 TL5 hosts on the virtual iSCSI disks mapped through the VIOS 3.1.1.x. By default, the rw_timeout value of the virtual iSCSI disks (hdisk) on VIOC will be 45 seconds. If an I/O delay greater than 45 seconds happens during storage failover, an I/O failure might occur. To avoid this situation, refer to the workaround mentioned in the BURT. As per IBM, after applying APAR - IJ34739 (upcoming release) we can dynamically change the rw_timeout value using the chdev command. |
+| 1416221 | AIX 7200-05-01 encountered I/O disruption on virtual iSCSI disks(VIOS 3.1.1.x) during storage failover | I/O disruption can happen during storage failover operations on AIX 7.2 TL5 hosts on the virtual iSCSI disks mapped through the VIOS 3.1.1.x. By default, the `rw_timeout` value of the virtual iSCSI disks (hdisk) on VIOC will be 45 seconds. If an I/O delay greater than 45 seconds happens during storage failover, an I/O failure might occur. To avoid this situation, refer to the workaround mentioned in the BURT. As per IBM, after applying APAR - IJ34739 (upcoming release) we can dynamically change the rw_timeout value using the `chdev` command. |
 
 
-| 1414700 | AIX 7.2 TL04 encountered I/O disruption on virtual iSCSI disks(VIOS 3.1.1.x) during storage failover | I/O disruption can happen during storage failover operations on AIX 7.2 TL4 hosts on the virtual iSCSI disks mapped through the VIOS 3.1.1.x. By default, the rw_timeout value of vSCSI adapter on VIOC is 45 seconds. If an I/O delay of  more than 45 seconds happens during a storage failover, I/O failure might  occur. To avoid this situation, refer to the workaround mentioned in the BURT. |
+| 1414700 | AIX 7.2 TL04 encountered I/O disruption on virtual iSCSI disks(VIOS 3.1.1.x) during storage failover | I/O disruption can happen during storage failover operations on AIX 7.2 TL4 hosts on the virtual iSCSI disks mapped through the VIOS 3.1.1.x. By default, the `rw_timeout` value of vSCSI adapter on VIOC is 45 seconds. If an I/O delay of  more than 45 seconds happens during a storage failover, I/O failure might  occur. To avoid this situation, refer to the workaround mentioned in the BURT. |
 
-| 1307653 | Seeing I/O issues on VIOS 3.1.1.10 during SFO faults and straight I/O | On VIOS 3.1.1 IO failures may be seen on NPIV client disk which are backed by 16/32Gb FC adapters.  Also, a vfchost driver may get into a state where it stops processing I/O requests from the client. Applying IBM APAR IJ22290 IBM APAR IJ23222 will fix the issue. |
+| 1307653 | Seeing I/O issues on VIOS 3.1.1.10 during SFO faults and straight I/O | On VIOS 3.1.1 IO failures may be seen on NPIV client disk which are backed by 16/32Gb FC adapters.  Also, a `vfchost` driver may get into a state where it stops processing I/O requests from the client. Applying IBM APAR IJ22290 IBM APAR IJ23222 will fix the issue. |
 
 |===
