--- a/hu_ol_83.adoc
+++ b/hu_ol_83.adoc
@@ -124,4 +124,4 @@ NOTE: To configure Oracle Linux 8.3 Red Hat Enterprise Kernel (RHCK), use the li
 
 There are no known issues for Oracle Linux 8.3.
 
-NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the Known Issues section in the corresponding Red Hat Enterprise Linux release documentation.
+NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_83.html#known-problems-and-limitations[known issues] section in the corresponding Red Hat Enterprise Linux release documentation.
