Changing text as per post-migration instruction

--- a/_include/hu/reuse_hu_installing_luhu_with32.adoc
+++ b/_include/hu/reuse_hu_installing_luhu_with32.adoc
@@ -2,7 +2,7 @@ The NetApp Linux Unified Host Utilities software package is available on the lin
 
 Installing the Linux Unified Host Utilities is strongly recommended, but not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
 
-.Before you begin
+.What you'll need
 
 If you have a version of Linux Unified Host Utilities currently installed you should upgrade it or, you should remove it and use the following steps to install the latest version.
 
