--- a/hu_citrix_8x.adoc
+++ b/hu_citrix_8x.adoc
@@ -20,7 +20,7 @@ This document provides guidance on ONTAP SAN host configuration settings for Cit
 
 == SAN Booting
 
-.Before you begin
+.What you'll need
 
 If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=91241;&solution=236&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
 
