--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -17,7 +17,7 @@ summary: Describes how to use the Linux Unified Host Utilities 7.1 with ONTAP
 
 == Pre-requisites
 
-.Before you begin
+.What you'll need
 
 * For reliable operation, you must verify that your entire iSCSI, FC, or FCoE configuration is supported.
 +
