--- a/hu_vsphere_7.adoc
+++ b/hu_vsphere_7.adoc
@@ -19,7 +19,7 @@ This document provides guidance on ONTAP SAN host configuration settings for the
 
 == Hypervisor SAN Booting
 
-.Before you begin
+.What you'll need
 If you decide to use SAN booting, it must be supported by your configuration. You can use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
 
 include::_include/hu/reuse_hu_san_booting_steps.adoc[]
