--- a/nvme_esxi_7.adoc
+++ b/nvme_esxi_7.adoc
@@ -26,6 +26,7 @@ The following are not supported:
 
 * RDM mapping
 * VVols
+* SAN Booting
 
 ==	Enabling NVMe/FC with ANA
 
@@ -52,12 +53,13 @@ Value of HppManageDegradedPaths is 0
 # esxcli nvme info get
 Host NQN: nqn.2014-08.com.vmware:nvme:chat-54-113
 
-*> vserver nvme subsystem host show -vserver co_nv_fc_esx
-Vserver Subsystem Host NQN
-------- --------- ----------------------------------------------------------
-co_nv_fc_esx
-        subsys_chat_54_113_nvme
-                  nqn.2014-08.com.vmware:nvme:chat-54-113
+*> vserver nvme subsystem host show -vserver vserver_esx_70_nvme
+Vserver                  Subsystem
+----------------------------------------------
+vserver_esx_70_nvme      sub_common_240_248
+Host NQN
+----------
+nqn.2014-08.com.vmware:nvme:nbs-esx-10-217
 ----
 
 ==	Configuring the Broadcom FC adapter for NVMe/FC
@@ -97,7 +99,7 @@ Installation Result
 
 . Reboot the host.
 
-. After reboot, verify that the recommended lpfc driver and adapter firmware versions have applied and the initiator ports are online:
+. After reboot, verify that the recommended lpfc driver and adapter firmware versions have been applied and the initiator ports are online:
 +
 ----
 # esxcli storage san fc list
@@ -130,6 +132,93 @@ Installation Result
    DriverVersion: 12.4.224.0
 ----
 
+== Configuring the Marvell FC adapter for NVMe/FC
+
+. Install the recommended lpfc driver by copying it to a temporary folder and then executing the following command:
+  +
+  ---
+# esxcli software vib install -d /MRVL-QLogic-FC_4.1.57.0-1OEM.700.1.0.15843807_18660354.zip
+         Installation Result
+         Message: Host is not changed.
+         Reboot Required: True
+        VIBs Installed: Marvell_bootbank_qlnativefc_4.1.57.0-1OEM.700.1.0.15843807
+         VIBs Removed: Marvell_bootbank_qlnativefc_4.1.14.0-1OEM.700.1.0.15843807
+        VIBs Skipped:
+---
+
+. If necessary, set the qlnativefc  driver parameter esxcfg-module -s 'ql2xnvmesupport=1' qlnativefc for enabling NVMe/FC support in the qlnativefc driver:
++
+NOTE: This parameter is set by default for the Qle 2772-series adapters. You must perform the following step to set it manually for Qle 2742 series adapters.
+
+. Reboot the host.
++
+---
+[root@nbs-pyrx256-11-236:~] esxcli storage san fc list
+   Adapter: vmhba3
+   Port ID: 012000
+   Node Name: 20:00:00:24:ff:18:17:ae
+   Port Name: 21:00:00:24:ff:18:17:ae
+   Speed: 32 Gbps
+   Port Type: NPort
+   Port State: ONLINE
+   Model Description: QLogic 32Gb 2-port FC to PCIe Gen3 x8 Adapter
+   Hardware Version:
+   OptionROM Version: 3.62
+   Firmware Version: 9.07.00 (d0d5)
+   Driver Name: qlnativefc
+   DriverVersion: 4.1.57.0
+
+   Adapter: vmhba4
+   Port ID: 010900
+   Node Name: 20:00:00:24:ff:18:17:af
+   Port Name: 21:00:00:24:ff:18:17:af
+   Speed: 32 Gbps
+   Port Type: NPort
+   Port State: ONLINE
+   Model Description: QLogic 32Gb 2-port FC to PCIe Gen3 x8 Adapter
+   Hardware Version:
+   OptionROM Version: 3.62
+   Firmware Version: 9.07.00 (d0d5)
+   Driver Name: qlnativefc
+   DriverVersion: 4.1.57.0
+
+   Adapter: vmhba64
+   Port ID: 012000
+   Node Name: 20:00:00:24:ff:18:17:ae
+   Port Name: 21:00:00:24:ff:18:17:ae
+   Speed: 32 Gbps
+   Port Type: NPort
+   Port State: ONLINE
+   Model Description: QLogic 32Gb 2-port FC to PCIe Gen3 x8 Adapter
+   Hardware Version:
+   OptionROM Version: 3.62
+   Firmware Version: 9.07.00 (d0d5)
+   Driver Name: qlnativefc
+   DriverVersion: 4.1.57.0
+
+   Adapter: vmhba65
+   Port ID: 010900
+   Node Name: 20:00:00:24:ff:18:17:af
+   Port Name: 21:00:00:24:ff:18:17:af
+   Speed: 32 Gbps
+   Port Type: NPort
+   Port State: ONLINE
+   Model Description: QLogic 32Gb 2-port FC to PCIe Gen3 x8 Adapter
+   Hardware Version:
+   OptionROM Version: 3.62
+   Firmware Version: 9.07.00 (d0d5)
+   Driver Name: qlnativefc
+   DriverVersion: 4.1.57.0
+
+[root@nbs-pyrx256-11-236:~] esxcli storage core adapter list
+HBA Name  Driver      Link State  UID                                   Capabilities         Description
+--------  ----------  ----------  ------------------------------------  -------------------  -----------
+ vmhba3    qlnativefc  link-up     fc.20000024ff1817ae:21000024ff1817ae  Second Level Lun ID  (0000:5e:00.0) QLogic Corp QLE2742 Dual Port 32Gb Fibre Channel to PCIe Adapter   --- FC protocol
+vmhba4    qlnativefc  link-up     fc.20000024ff1817af:21000024ff1817af  Second Level Lun ID  (0000:5e:00.1) QLogic Corp QLE2742 Dual Port 32Gb Fibre Channel to PCIe Adapter - FC protocol
+vmhba64   qlnativefc  link-up     fc.20000024ff1817ae:21000024ff1817ae                       (0000:5e:00.0) QLogic Corp QLE2742 Dual Port 32Gb Fibre Channel to PCIe Adapter --- NVMe FC protocol
+vmhba65   qlnativefc  link-up     fc.20000024ff1817af:21000024ff1817af                       (0000:5e:00.1) QLogic Corp QLE2742 Dual Port 32Gb Fibre Channel to PCIe Adapter - NVMe FC protocol
+[root@nbs-pyrx256-11-236:~]
+---
 ==	Validating NVMe/FC
 
 . Verify that the ONTAP target NVMe/FC controllers are properly discovered on the ESXi host:
@@ -188,3 +277,19 @@ fc.20000090fae0ec8e:10000090fae0ec8e-fc.204900a098dfe3d1:204a00a098dfe3d1-uuid.1
    Device: uuid.1aa669c5376240a28ae47d8d549586ea
    Device Display Name: NVMe Fibre Channel Disk (uuid.1aa669c5376240a28ae47d8d549586ea)
    Path State: standby
+----
+
+== Known issue
+
+*	ESXi 7.0 U3 (& above) NVMe/FC support is available starting ONTAP 9.9.1 P3 onwards. This is due to key NVMe abort (issued by ESXi 7.0 U3 & above) fixes that is available starting ONTAP 9.9.1 P3 only. Please refer to the respective burt public report at https://mysupport.netapp.com/site/bugs-online/product/ONTAP/BURT/1420654 for details.
+
+
+*	For ESXi NVMe/FC deployment with ONTAP, please refer to ONTAP SAN Host Configuration - Product Documentation for details.
+
+*	For known issues identified with ESXi 7.0 with FC-NVMe, please refer to NetApp support site.
+
+
+== Release Notes
+
+link:[TR-4597-VMware vSphere with ONTAP]
+link:https://kb.vmware.com/s/article/2031038[VMware vSphere 5.x, 6.x and 7.x support with NetApp MetroCluster  (2031038)]
