--- a/hu_solaris_114.adoc
+++ b/hu_solaris_114.adoc
@@ -156,6 +156,31 @@ Do not proceed until *ashift* shows a value of 12.
 
 NOTE: Patches are available for Oracle bug 15824910 on various versions of Solaris. Contact Oracle if assistance is required in determining the best kernel patch.
 
+== Recommended Settings for SnapMirror Business Continuity (SM-BC)
+
+In order to ensure the Solaris client applications are non-disruptive when an unplanned site failover switchover occurs in an SnapMirror Business Continuity (SM-BC) environment, the following setting needs to be configured on Solaris 11.4 host. This setting will override the failover module – `f_tpgs` in order to prevent the code path that detects the contradiction from being executed.
+
+Follow the instructions to configure the override parameter:
+
+. Create configuration file ``/etc/driver/drv/scsi_vhci.conf` with an entry similar to the following for the NetApp storage type connected to the host:
++
+----
+scsi-vhci-failover-override =        "NETAPP  LUN","f_tpgs"
+----
+. Use `devprop` and `mdb` commands to verify the override has been successfully applied:
++
+----
+root@host-A:~# devprop -v -n /scsi_vhci scsi-vhci-failover-override      scsi-vhci-failover-override=NETAPP  LUN + f_tpgs
+root@host-A:~# echo "*scsi_vhci_dip::print -x struct dev_info devi_child
+| ::list struct dev_info devi_sibling
+| ::print struct dev_info devi_mdi_client
+| ::print mdi_client_t ct_vprivate
+| ::print struct scsi_vhci_lun svl_lun_wwn svl_fops_name"
+| mdb -k      svl_lun_wwn = 0xa002a1c8960 "600a098038313477543f524539787938"      svl_fops_name = 0xa00298d69e0 "conf f_tpgs"
+----
+
+NOTE: `conf` will be added to the svl_fops_name when a scsi-vhci-failover-override has been applied.  For additional information and recommended changes to default settings, refer to NetApp KB article Solaris Host support recommended settings in SnapMirror Business Continuity (SM-BC) configuration.
+
 == Known Problems and Limitations
 
 [cols=4*, options="header"]
