--- a/hu_solaris_114.adoc
+++ b/hu_solaris_114.adoc
@@ -40,13 +40,13 @@ The following example uncompresses files for a SPARC system.  For x86-64 platfor
 `pkgadd -d NTAPSANTool.pkg`
 +
 The packages are added to the /opt/NTAP/SANToolkit/bin directory.
-
++
 To complete the installation, you must configure the host parameters for your environment (MPxIO in this case) using  `host_config` command.
-
++
 The host_config command has the following format:
-
++
 `/opt/NTAP/SANToolkit/bin/host_config <-setup> <-protocol fcp|iscsi|mixed> <-multipath mpxio|dmp| non> [-noalua] [-mcc 60|90|120]`
-
++
 The host_config command does the following:
 
 *	Makes setting changes for the Fibre Channel and SCSI drivers for both X86 and SPARC systems
@@ -54,6 +54,7 @@ The host_config command does the following:
 *	Sets the VID/PID information
 *	Enables or disables ALUA
 *	Configures the ALUA settings used by MPxIO and the SCSI drivers for both X86 and SPARC systems.
++
 
 . Reboot the host.
 
@@ -169,17 +170,17 @@ scsi-vhci-failover-override =        "NETAPP  LUN","f_tpgs"
 ----
 . Use `devprop` and `mdb` commands to verify the override has been successfully applied:
 +
+`root@host-A:~# devprop -v -n /scsi_vhci scsi-vhci-failover-override      scsi-vhci-failover-override=NETAPP  LUN + f_tpgs
+root@host-A:~# echo "*scsi_vhci_dip::print -x struct dev_info devi_child | ::list struct dev_info devi_sibling| ::print struct dev_info devi_mdi_client| ::print mdi_client_t ct_vprivate| ::print struct scsi_vhci_lun svl_lun_wwn svl_fops_name"| mdb -k`
+
++
 ----
-root@host-A:~# devprop -v -n /scsi_vhci scsi-vhci-failover-override      scsi-vhci-failover-override=NETAPP  LUN + f_tpgs
-root@host-A:~# echo "*scsi_vhci_dip::print -x struct dev_info devi_child
-| ::list struct dev_info devi_sibling
-| ::print struct dev_info devi_mdi_client
-| ::print mdi_client_t ct_vprivate
-| ::print struct scsi_vhci_lun svl_lun_wwn svl_fops_name"
-| mdb -k      svl_lun_wwn = 0xa002a1c8960 "600a098038313477543f524539787938"      svl_fops_name = 0xa00298d69e0 "conf f_tpgs"
+svl_lun_wwn = 0xa002a1c8960 "600a098038313477543f524539787938"
+svl_fops_name = 0xa00298d69e0 "conf f_tpgs"
 ----
 
-NOTE: `conf` will be added to the svl_fops_name when a scsi-vhci-failover-override has been applied.  For additional information and recommended changes to default settings, refer to NetApp KB article Solaris Host support recommended settings in SnapMirror Business Continuity (SM-BC) configuration.
+NOTE: `conf` will be added to the svl_fops_name when a scsi-vhci-failover-override has been applied.
+For additional information and recommended changes to default settings, refer to NetApp KB article "Solaris Host support recommended settings in SnapMirror Business Continuity (SM-BC) configuration".
 
 == Known Problems and Limitations
 
