--- a/hu_solaris_114.adoc
+++ b/hu_solaris_114.adoc
@@ -88,7 +88,7 @@ You can set up a SAN boot LUN to work in a Solaris MPxIO environment using the F
 
 == Multipathing
 
-Multipathing allows you to configure multiple network paths between the host and storage system. If one path fails, traffic continues on the remaining paths. Oracle Solaris I/O Multipathing (MPxIO) is enabled by default for Solaris 11.4. The default setting in /kernel/drv/fp.conf changes to mpxio-disable="no"
+Multipathing allows you to configure multiple network paths between the host and storage system. If one path fails, traffic continues on the remaining paths. Oracle Solaris I/O Multipathing (MPxIO) is enabled by default for Solaris 11.4. The default setting in /kernel/drv/fp.conf changes to mpxio-disable="no".
 
 include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
@@ -157,16 +157,17 @@ Do not proceed until *ashift* shows a value of 12.
 
 NOTE: Patches are available for Oracle bug 15824910 on various versions of Solaris. Contact Oracle if assistance is required in determining the best kernel patch.
 
-== Recommended Settings for SnapMirror Business Continuity (SM-BC)
+== Recommended Settings for SnapMirror Business Continuity
 
 In order to ensure the Solaris client applications are non-disruptive when an unplanned site failover switchover occurs in an SnapMirror Business Continuity (SM-BC) environment, the following setting needs to be configured on Solaris 11.4 host. This setting will override the failover module – `f_tpgs` in order to prevent the code path that detects the contradiction from being executed.
 
 Follow the instructions to configure the override parameter:
 
-. Create configuration file ``/etc/driver/drv/scsi_vhci.conf` with an entry similar to the following for the NetApp storage type connected to the host:
+. Create configuration file `/etc/driver/drv/scsi_vhci.conf` with an entry similar to the following for the NetApp storage type connected to the host:
 +
 ----
-scsi-vhci-failover-override =        "NETAPP  LUN","f_tpgs"
+scsi-vhci-failover-override =
+"NETAPP  LUN","f_tpgs"
 ----
 . Use `devprop` and `mdb` commands to verify the override has been successfully applied:
 +
@@ -180,7 +181,7 @@ svl_fops_name = 0xa00298d69e0 "conf f_tpgs"
 ----
 
 NOTE: `conf` will be added to the svl_fops_name when a scsi-vhci-failover-override has been applied.
-For additional information and recommended changes to default settings, refer to NetApp KB article "Solaris Host support recommended settings in SnapMirror Business Continuity (SM-BC) configuration".
+For additional information and recommended changes to default settings, refer to NetApp KB article https://kb.netapp.com/Advice_and_Troubleshooting/Data_Protection_and_Security/SnapMirror/Solaris_Host_support_recommended_settings_in_SnapMirror_Business_Continuity_(SM-BC)_configuration[Solaris Host support recommended settings in SnapMirror Business Continuity (SM-BC) configuration].
 
 == Known Problems and Limitations
 
